<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jsr_medicare"
        android:textSize="40sp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gst_rate"
        android:textSize="26sp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>

    <RadioGroup
        android:id="@+id/radioGst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:textAlignment="center">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/_5"
            android:textSize="18dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/_12"
            android:textSize="18dp"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/_18"
            android:textSize="18dp"/>

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/_28"
            android:textSize="18dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp" />

    </RadioGroup>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_mrp"
        android:textSize="26sp"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sale_valuedis"
        android:textSize="26sp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:text="@string/sale_rate"
        android:textSize="28sp"
        android:textIsSelectable="true"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:textSize="25dp"
        android:layout_marginTop="35dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developed_by_pranav_soneji"
        android:textSize="15dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>